[package]
name = "diswh"
description = """
A simple way to send webhook messages, or edit for discord. Fully featured with builders to make things easy!
"""
version = "0.1.0"
edition = "2021"
authors = ["HellFireNeko"]
readme = "README.md"
license = "CC0-1.0"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"]}
