[package]
name = "diswh"
description = """
A simple way to send webhook messages, or edit for discord. Fully featured with builders to make things easy!
"""
version = "0.1.1"
edition = "2021"
authors = ["HellFireNeko"]
readme = "README.md"
license = "CC0-1.0"

[dependencies]
curl = "0.4.44"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
